RESOLVED FIXED214993
[Mac] AudioSessionRoutingArbitrator causes a launch time regression checking for CoreAudio muted state
https://bugs.webkit.org/show_bug.cgi?id=214993
Summary [Mac] AudioSessionRoutingArbitrator causes a launch time regression checking ...
Jer Noble
Reported 2020-07-30 15:34:54 PDT
[Mac] AudioSessionRoutingArbitrator causes a launch time regression checking for CoreAudio muted state
Attachments
Patch (2.55 KB, patch)
2020-07-30 16:13 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-07-30 16:13:00 PDT
Jer Noble
Comment 2 2020-07-30 16:13:23 PDT
EWS
Comment 3 2020-07-31 23:09:20 PDT
Committed r265173: <https://trac.webkit.org/changeset/265173> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405632 [details].
Note You need to log in before you can comment on or make changes to this bug.